# computer-graphics

./: .gitignore  CLAUDE.md
Coursework/: .gitignore  mielirigify.fbx  rigmieli.blend  rigmieli.blend1
Coursework/CatmullRom/: CatmullRom.cpp  CatmullRom.h
Coursework/Template2026/: CMakeLists.txt  OpenGLTemplate.sln  build-and-run.sh
Coursework/Template2026/OpenGLTemplate/: AnimatedMesh.cpp  AnimatedMesh.h  Asteroid.h  Audio.cpp  Audio.h  Bridge.cpp  Bridge.h  Camera.cpp  FreeTypeFont.cpp  FreeTypeFont.h  Game.cpp  Game.h  GameWindow.cpp  GameWindow.h  MatrixStack.h  OpenAssetImportMesh.cpp  OpenGLTemplate.vcxproj  OpenGLTemplate.vcxproj.filters  ParticleSystem.h  Ship.cpp  Ship.h  Skybox.cpp  TacticalGame.cpp  TacticalGame.h  TacticalGrid.cpp  TacticalGrid.h  Texture.cpp  export_sail.py  solar_sail.mtl
Coursework/Template2026/OpenGLTemplate/CatmullRom/: CatmullRom.cpp  CatmullRom.h
Coursework/Template2026/OpenGLTemplate/resources/models/: TableHall.mtl
Coursework/Template2026/OpenGLTemplate/resources/models/Chair/source/: Chair.mtl
Coursework/Template2026/OpenGLTemplate/resources/models/Jean/: idle.fbx  jump.fbx  right strafe walking.fbx  running.fbx
Coursework/Template2026/OpenGLTemplate/resources/models/Mieli/: bake_atlas.py  idle.fbx  jump.fbx  left strafe walk.fbx  left strafe.fbx  left turn.fbx  mielitrim.mtl  reassign_materials.py  right strafe walk.fbx  right strafe.fbx  right turn.fbx  running.fbx  walking.fbx
Coursework/Template2026/OpenGLTemplate/resources/models/MonitoringStation/source/: Table.mtl
Coursework/Template2026/OpenGLTemplate/resources/models/Table/source/: table3.mtl
Coursework/Template2026/OpenGLTemplate/resources/shaders/: bloomShader.frag  hologramShader.frag  hologramShader.vert  hullShader.vert  mainShader.frag  mainShader.vert  sailShader.frag  sailShader.vert  shadowMap.vert  shadowMapSkinned.vert  skinningShader.frag  skinningShader.vert  textShader.frag
Coursework/Template2026/OpenGLTemplate/resources/textures/: neon.avif
Coursework/Template2026/OpenGLTemplate/x64/Debug/: OpenGLTemplate.exe.recipe
Coursework/Template2026/OpenGLTemplate/x64/Release/: OpenGLTemplate.exe.recipe
Coursework/archive/: Ship.cpp  Ship.h
Coursework/temp/Template2026/Template2026/OpenGLTemplate/: AnimatedMesh.cpp  AnimatedMesh.h  Asteroid.cpp  Audio.cpp  Audio.h  Bridge.cpp  Bridge.h  Camera.cpp  Camera.h  CatmullRom.cpp  Cubemap.cpp  Cubemap.h  FrameBufferObject.cpp  FrameBufferObject.h  FreeTypeFont.cpp  Game.cpp  Game.h  GameWindow.cpp  OpenAssetImportMesh.cpp  OpenAssetImportMesh.h  OpenGLTemplate.vcxproj  OpenGLTemplate.vcxproj.filters  ParticleSystem.cpp  Shaders.cpp  Ship.cpp  Ship.h  Skybox.cpp  Skybox.h  TacticalGame.cpp  TacticalGame.h
Coursework/temp/Template2026/Template2026/OpenGLTemplate/resources/models/Jean/: left strafe walking.fbx  left strafe.fbx  left turn 90.fbx  left turn.fbx  right strafe.fbx  right turn 90.fbx  right turn.fbx  walking.fbx
Coursework/temp/Template2026/Template2026/OpenGLTemplate/resources/models/Mieli/: left strafe walk.fbx  left strafe.fbx  left turn.fbx  right turn.fbx  running.fbx
Coursework/temp/Template2026/Template2026/OpenGLTemplate/resources/models/chen/: chen.fbx  chen.glb
Coursework/temp/Template2026/Template2026/OpenGLTemplate/resources/shaders/: bloomShader.vert  hullShader.frag  particleShader.frag  particleShader.vert  sailShader.frag  sailShader.vert  shadowMap.frag  skinningShader.frag  skinningShader.vert
Coursework/writeup/: main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  refs.bib
Coursework/writeup-final/: IN3005_Rasmussen_Anker_230022888.aux  IN3005_Rasmussen_Anker_230022888.bbl  IN3005_Rasmussen_Anker_230022888.bcf  IN3005_Rasmussen_Anker_230022888.blg  IN3005_Rasmussen_Anker_230022888.out  IN3005_Rasmussen_Anker_230022888.run.xml  IN3005_Rasmussen_Anker_230022888.tex  main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.out  refs.bib
Labs/Lab1Demo/Demo/: CMakeLists.txt  Lab1.sln  build-and-run.sh
Labs/Lab1Demo/Demo/Lab1/: Common.h  Game.cpp  Game.h  GameWindow.cpp  GameWindow.h  HighResolutionTimer.cpp  Lab1.vcxproj  Lab1.vcxproj.filters  OpenGLTemplate.vcxproj.filters  Shaders.cpp  Shaders.h
Labs/Lab1Demo/Demo/Lab1/resources/shaders/: shader.vert
Labs/Lab2Demo/Demo/: CMakeLists.txt  Lab2.sln  build-and-run.sh
Labs/Lab2Demo/Demo/Lab2/: Common.h  Game.cpp  Game.h  GameWindow.cpp  GameWindow.h  HighResolutionTimer.cpp  HighResolutionTimer.h  Lab2.vcxproj  Lab2.vcxproj.filters  MatrixStack.cpp  MatrixStack.h  Shaders.cpp  Shaders.h  Sphere.cpp  Sphere.h  Texture.cpp  Texture.h  VertexBufferObject.cpp  VertexBufferObject.h
Labs/Lab2Demo/Demo/Lab2/data/shaders/: shader.frag  shader.vert
Labs/Lab2Demo/Demo/Lab2/x64/Debug/: Lab2.exe.recipe
Labs/Lab4Demo/: CMakeLists.txt  build-and-run.sh
Labs/Lab4Demo/OpenGLTemplate/: Camera.cpp  Camera.h  Common.h  Cubemap.cpp  Cubemap.h  FreeTypeFont.cpp  FreeTypeFont.h  Game.cpp  Game.h  GameWindow.cpp  Grid.cpp  Grid.h  HighResolutionTimer.cpp  HighResolutionTimer.h  MatrixStack.cpp  OpenAssetImportMesh.h  OpenGLTemplate.vcxproj  OpenGLTemplate.vcxproj.filters  Skybox.cpp
Labs/Lab4Demo/OpenGLTemplate/resources/shaders/: sphereShader.frag  sphereShader.vert
Lectures/: Notes.md
